fixed body margins on mobile

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,6 @@ a.button:hover{
 .logo {
     width: 15%;
     max-width: 250px;
-    min-width: 150px;
     margin-left: 180px;
     margin-top: 20px;
   }
@@ -328,8 +327,11 @@ a.button:hover{
         font-size: 1rem;
     }
 
+    nav {
+        max-width: 100%;
+    }
+
     body {
-        width: 100%;
         max-width: 100%;
         margin: auto;
         letter-spacing: .05rem;
@@ -355,14 +357,15 @@ a.button:hover{
       }  
 
     .logo {
-        width: 40%;
+        width: 35%;
         margin-left: 20px;
         margin-top: 10px;
+        margin-right: 20px;
       }
 
     .nav-links img {
-        height: 27px;
-        width: 27px;
+        height: 23px;
+        width: 23px;
       }
 
     .nav-links li {
@@ -372,7 +375,7 @@ a.button:hover{
     .nav-links a {
         display: flex;
         align-items: center;
-        padding: 3px;
+        padding: 2px;
       }
 
     .accordion_head {
@@ -417,15 +420,15 @@ a.button:hover{
     #email-box {
         position: absolute;
         margin-left: 22%;
-        top: 80px;
+        top: 50px;
         background-color: #000;
-        padding: 10px;
+        padding: 7px;
         border-radius: 10px;
         display: none;
       }
 
       #email-box p {
-        font-size: 0.7rem;
+        font-size: 0.65rem;
       }
 
     #cor p {
